# ai

./: README.md
.github/workflows/: ai_branch.yml
building/: Makefile  README.MD  __init__.py
building/docs/: guides.MD
building/src/data_processing/: __init__.py
building/src/models/action_suggestion/: __init__.py
building/src/models/climate_prediction/: __init__.py  test.py  train.py  validate.py
building/src/models/game_opponent/: __init__.py
inference/: README.MD
training/: .gitignore  Makefile  README.md  __init__.py  pyproject.toml
training/data/climate_prediction/interim/: interim_climate_dataset.csv
training/data/climate_prediction/raw/: Indicator_3_1_Climate_Annual_Mean_Global_Surface_Temperature.csv  Indicator_3_2_Climate_Monthly_Atmospheric_Carbon_Dioxide_concentrations.csv  full_global_temperature_means_1880_to_2024.csv  full_mona_loa_avg_co2_concentrations_1880_to_2024.csv  global_NOAA_mean_anomaly_sea_levels_1992_to_2025.csv  global_co2_concentrations_1880_to_2011.csv  global_co2_concentrations_monthly_mean_mona_loa_1958_to_2024.csv  global_mean_sea_levels_1880_to_2015.csv
training/docs/: README.md  guides.MD  python_version.md
training/src/: __init__.py
training/src/constants/: data_file_paths.py
training/src/data-processor/: __init__.py
training/src/data_processing/: __init__.py  data-processor.py
training/src/data_processing/constants/: __init__.py  climate_dataset_columns.py  data_file_paths.py
training/src/models/climate_prediction/: __init__.py  test.py  train.py
