[project]
name = ""
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
    {name = "", email = ""}
]
dependencies = ["mypy>=1.14.1", "ruff>=0.9.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.mypy]
#More readings https://mypy.readthedocs.io/en/stable/config_file.html
python_executable = ".venv/Scripts/python.exe"
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
warn_incomplete_stub = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# info about rules can be found at https://docs.astral.sh/ruff/rules/
select = ["E", "F", "B", "W", "N", "ANN", "D"]
ignore = ["D212", "D203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"